# techslop

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pipeline.py  pyproject.toml  record_voice.sh
scripts/: generate_icon.py  synth_voice.py
techslop/: config.py  db.py  models.py
techslop/image_gen/: grid.py  split.py
techslop/ingest/: fourchan.py  hackernews.py  reddit.py  scorer.py  sources.py  techcrunch.py  xtwitter.py
techslop/motion/: kling.py
techslop/publish/: instagram.py  linkedin.py  tiktok.py  youtube.py
techslop/scriptgen/: generator.py
techslop/video/: assembler.py  assets.py  captions.py
techslop/voice/: base.py  chatterbox_tts.py  edge.py  elevenlabs.py  openai.py  timestamps.py
tests/: test_captions.py  test_config.py  test_db.py  test_ingest.py  test_models.py  test_scorer.py
tests/integration/: test_sources_live.py
